[gd_scene load_steps=20 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_27.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://crmk1cqu3hxhy" path="res://Art/Level/Game3Level/Level_2_3/dwtw.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b65dochqy7jwf" path="res://Art/Level/Game3Level/Level_2_3/leftdoor.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dwbir3x40so4j" path="res://Art/Level/Game3Level/Level_2_3/rightdoor.png" id="5"]
[ext_resource type="Texture2D" uid="uid://clywn13odek86" path="res://Art/Level/Game3Level/Level_2_3/zz.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bl5x5gh546o8h" path="res://Art/Level/Game3Level/Level_2_3/floordwtw.png" id="7"]
[ext_resource type="PackedScene" uid="uid://byc4f0mfq1cp4" path="res://Scene/Level/trap_2_dwtw.tscn" id="8"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(6099, 700)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1045.5, 1196)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1194.25, 1196)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(90.5, 1196)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(1777.25, 1593)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(236, 34)
script = null

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(774.75, 1420)
script = null

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(67, 181)
script = null

[sub_resource type="Animation" id="9"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGround/floor_2/Leftdoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1335, 173), Vector2(1000, 173)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackGround/floor_2/Rightdoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1810, 172), Vector2(1870, 172)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CSM/Check:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DoorCheck/Check:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="AnimationLibrary" id="10"]
_data = {
"open": SubResource( "9" )
}
script = null

[sub_resource type="RectangleShape2D" id="11"]
size = Vector2(336, 336)
script = null

[node name="Level_27" instance=ExtResource( "1" )]
script = ExtResource( "2" )
metadata/_edit_vertical_guides_ = [1099.0]

[node name="floor" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(3047.5, 750)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(1624.25, -120)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(2846.88, -120)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(3544, -114)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(5486.38, 77.5)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stage1" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(322, 251)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage2" type="CollisionShape2D" parent="wall" index="8"]
position = Vector2(598, 95)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage3" type="CollisionShape2D" parent="wall" index="9"]
position = Vector2(855, 250)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage4" type="CollisionShape2D" parent="wall" index="10"]
position = Vector2(2267, 207)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage5" type="CollisionShape2D" parent="wall" index="11"]
position = Vector2(2753, 207)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage6" type="CollisionShape2D" parent="wall" index="12"]
position = Vector2(3278, 239)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage7" type="CollisionShape2D" parent="wall" index="13"]
position = Vector2(3481, 132)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage8" type="CollisionShape2D" parent="wall" index="14"]
position = Vector2(3710, 36)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="15"]
position = Vector2(3204.63, -211)
shape = SubResource( "7" )
disabled = true
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="Dwtw" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2352, 299)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="Leftdoor" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(1335, 173)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="Rightdoor" type="Sprite2D" parent="BackGround/floor_2" index="1"]
position = Vector2(1810, 172)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="Zz" type="Sprite2D" parent="BackGround/floor_2" index="2"]
position = Vector2(1591, 252)
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="Floordwtw" type="Sprite2D" parent="BackGround/floor_2" index="3"]
position = Vector2(2349, 357)
texture = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="floor" parent="BackGround/floor_2" index="4"]
position = Vector2(79, -1)

[node name="Trap2dwtw" parent="." index="10" instance=ExtResource( "8" )]
position = Vector2(578, -101)
metadata/_edit_lock_ = true

[node name="Trap2dwtw2" parent="." index="11" instance=ExtResource( "8" )]
position = Vector2(2513, -102)

[node name="Trap2dwtw8" parent="." index="12" instance=ExtResource( "8" )]
position = Vector2(3931, -100)

[node name="Trap2dwtw5" parent="." index="13" instance=ExtResource( "8" )]
position = Vector2(2901, -102)

[node name="Trap2dwtw3" parent="." index="14" instance=ExtResource( "8" )]
position = Vector2(2042, 394)
rotation = -3.14159

[node name="Trap2dwtw4" parent="." index="15" instance=ExtResource( "8" )]
position = Vector2(3063, 394)
rotation = -3.14159

[node name="Trap2dwtw6" parent="." index="16" instance=ExtResource( "8" )]
position = Vector2(3338, 394)
rotation = -3.14159

[node name="Trap2dwtw7" parent="." index="17" instance=ExtResource( "8" )]
position = Vector2(3657, 396)
rotation = -3.14159

[node name="exit" parent="." index="18"]
position = Vector2(4520, 331)
metadata/_edit_lock_ = true

[node name="DoorCheck" type="Area2D" parent="." index="22"]
position = Vector2(1562, 74)
collision_layer = 0
collision_mask = 2

[node name="Check" type="CollisionShape2D" parent="DoorCheck" index="0"]
position = Vector2(10.5, -16.5)
shape = SubResource( "8" )
metadata/_edit_lock_ = true

[node name="mm" type="AnimationPlayer" parent="." index="23"]
libraries = {
"": SubResource( "10" )
}

[node name="CSM" type="Area2D" parent="." index="24"]
position = Vector2(1402, 76)
collision_layer = 16
collision_mask = 16

[node name="Check" type="CollisionShape2D" parent="CSM" index="0"]
position = Vector2(64, -16)
shape = SubResource( "11" )
disabled = true
metadata/_edit_lock_ = true

[connection signal="area_entered" from="DoorCheck" to="." method="_on_door_check_area_entered" flags=18]
[connection signal="body_entered" from="CSM" to="." method="_on_csm_body_entered" flags=18]
[connection signal="body_exited" from="CSM" to="." method="_on_csm_body_exited" flags=18]
